--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,7 +26,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/textPartOfDay"
-        app:srcCompat="@drawable/sun" />
+        android:src="@drawable/sun"/>
 
     <TextView
         android:id="@+id/textWeatherNow"
