--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -39,7 +39,6 @@
             android:layout_height="wrap_content"
             android:gravity="center">
 
-
             <ImageView
                 android:id="@+id/image_weather_now"
                 android:layout_width="wrap_content"
@@ -128,7 +127,7 @@
         android:scaleType="fitXY"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:srcCompat="@drawable/update" />
+        android:src="@drawable/update" />
 
     <ImageButton
         android:id="@+id/button_settings"
@@ -141,7 +140,7 @@
         android:scaleType="fitXY"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:srcCompat="@drawable/settings" />
+        android:src="@drawable/settings" />
 
 
 </android.support.constraint.ConstraintLayout>
