--- a/app/src/main/res/drawable-v24/gradient_background.xml
+++ b/app/src/main/res/drawable-v24/gradient_background.xml
@@ -3,12 +3,9 @@
 
     <gradient
         android:angle="90"
-        android:centerColor="#FFFFFF"
+        android:centerColor="#A1A1AA"
         android:endColor="#bffff2"
         android:startColor="#555994"
         android:type="linear" />
-
-    <corners
-        android:radius="0dp"/>
 
 </shape>
