--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,21 +15,17 @@
 
         <TextView
             android:id="@+id/location_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp"
+            style="@style/AppTheme.WHWrapContent"
+            android:layout_margin="@dimen/margin_10dp"
             android:text="@string/main_location_name"
-
-            android:textSize="26sp"
+            android:textSize="@dimen/text_26sp"
             android:textStyle="bold" />
 
         <TextView
             android:id="@+id/text_part_of_day"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-
+            style="@style/AppTheme.WHWrapContent"
             android:text="@string/main_part_of_day"
-            android:textSize="22sp"
+            android:textSize="@dimen/text_26sp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -41,9 +37,8 @@
 
             <ImageView
                 android:id="@+id/image_weather_now"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="10dp"
+                style="@style/AppTheme.WHWrapContent"
+                android:layout_margin="@dimen/margin_10dp"
                 android:layout_weight="0.5"
                 android:contentDescription="@string/image_weather_now_description"
                 android:src="@drawable/sun"
@@ -53,11 +48,10 @@
 
             <TextView
                 android:id="@+id/text_weather_now"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                style="@style/AppTheme.WHWrapContent"
                 android:layout_weight="0.5"
                 android:text="@string/main_weather_now"
-                android:textSize="60sp"
+                android:textSize="@dimen/text_60sp"
                 android:textStyle="bold"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
@@ -72,34 +66,21 @@
 
             <TextView
                 android:id="@+id/text_humidity_now"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="40dp"
-                android:layout_marginTop="20dp"
+                style="@style/AppTheme.WHWrapContent.AdditionalInfo"
                 android:text="@string/main_humidity"
-                android:textSize="20sp"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/text_weather_now" />
 
             <TextView
                 android:id="@+id/text_pressure_now"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="40dp"
-                android:layout_marginTop="10dp"
+                style="@style/AppTheme.WHWrapContent.AdditionalInfo"
                 android:text="@string/main_pressure"
-                android:textSize="20sp"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/text_humidity_now" />
 
             <TextView
-                android:id="@+id/text_wind_now"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="40dp"
-                android:layout_marginTop="10dp"
+                style="@style/AppTheme.WHWrapContent.AdditionalInfo"
                 android:text="@string/main_wind"
-                android:textSize="20sp"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/text_pressure_now" />
         </LinearLayout>
@@ -108,39 +89,30 @@
             android:id="@+id/grid_view_feature_weather"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginStart="@dimen/margin_20dp"
+            android:layout_marginTop="@dimen/margin_20dp"
             android:gravity="center"
-            android:numColumns="4">
-        </GridView>
+            android:numColumns="4" />
 
     </LinearLayout>
 
     <ImageButton
         android:id="@+id/button_refresh"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginBottom="10dp"
-        android:background="@null"
+        style="@style/AppTheme.ImageButtons"
+        android:layout_marginStart="@dimen/margin_20dp"
         android:contentDescription="@string/button_refresh_description"
-        android:scaleType="fitXY"
+        android:src="@drawable/update"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:src="@drawable/update" />
+        app:layout_constraintLeft_toLeftOf="parent" />
 
     <ImageButton
         android:id="@+id/button_settings"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginBottom="10dp"
-        android:background="@null"
+        style="@style/AppTheme.ImageButtons"
+        android:layout_marginEnd="@dimen/margin_20dp"
         android:contentDescription="@string/button_settings_description"
-        android:scaleType="fitXY"
+        android:src="@drawable/settings"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        android:src="@drawable/settings" />
+        app:layout_constraintRight_toRightOf="parent" />
 
 
 </android.support.constraint.ConstraintLayout>
