--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -8,21 +8,21 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="20dp"
+        android:layout_margin="@dimen/margin_20dp"
         android:orientation="vertical">
 
         <EditText
             android:id="@+id/settings_location_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
+            android:layout_marginBottom="@dimen/margin_10dp"
             android:hint="@string/settings_hint_location_name" />
 
         <Switch
             android:id="@+id/settings_show_additional_info"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
+            android:layout_marginBottom="@dimen/margin_10dp"
             android:text="@string/settings_show_additional_info" />
 
     </LinearLayout>
