--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,6 +6,32 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:textSize">@dimen/text_20sp</item>
     </style>
 
+    <style name="AppTheme.WHWrapContent">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+    </style>
+
+    <style name="AppTheme.WHWrapContent.AdditionalInfo">
+        <item name="android:layout_marginStart">@dimen/margin_40dp</item>
+        <item name="android:layout_marginTop">@dimen/margin_10dp</item>
+    </style>
+
+    <style name="AppTheme.ImageButtons">
+        <item name="android:layout_width">@dimen/layout_w_h_50dp</item>
+        <item name="android:layout_height">@dimen/layout_w_h_50dp</item>
+        <item name="android:layout_marginBottom">@dimen/margin_10dp</item>
+        <item name="android:background">@null</item>
+        <item name="android:scaleType">fitXY</item>
+    </style>
+
+    <style name="AppTheme.WHWrapContent.GridViewTextView">
+        <item name="android:gravity">center_horizontal</item>
+        <item name="android:paddingLeft">@dimen/padding_8dp</item>
+        <item name="android:paddingTop">@dimen/padding_4dp</item>
+        <item name="android:paddingRight">@dimen/padding_8dp</item>
+        <item name="android:textStyle">bold</item>
+    </style>
 </resources>
