--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,60 +30,13 @@
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <LinearLayout
+        <fragment
+            android:id="@+id/weather_fragment"
+            android:name="com.example.betterweather.WeatherFragment"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center">
+            android:layout_height="wrap_content">
 
-            <ImageView
-                android:id="@+id/image_weather_now"
-                style="@style/AppTheme.WHWrapContent"
-                android:layout_margin="@dimen/margin_10dp"
-                android:layout_weight="0.5"
-                android:contentDescription="@string/image_weather_now_description"
-                android:src="@drawable/sun"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/text_part_of_day" />
-
-            <TextView
-                android:id="@+id/text_weather_now"
-                style="@style/AppTheme.WHWrapContent"
-                android:layout_weight="0.5"
-                android:text="@string/main_weather_now"
-                android:textSize="@dimen/text_60sp"
-                android:textStyle="bold"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/image_weather_now" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/additional_info"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/text_humidity_now"
-                style="@style/AppTheme.WHWrapContent.AdditionalInfo"
-                android:text="@string/main_humidity"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/text_weather_now" />
-
-            <TextView
-                android:id="@+id/text_pressure_now"
-                style="@style/AppTheme.WHWrapContent.AdditionalInfo"
-                android:text="@string/main_pressure"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/text_humidity_now" />
-
-            <TextView
-                style="@style/AppTheme.WHWrapContent.AdditionalInfo"
-                android:text="@string/main_wind"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/text_pressure_now" />
-        </LinearLayout>
+        </fragment>
 
         <GridView
             android:id="@+id/grid_view_feature_weather"
