Переделал настройки и основной экран с использованием RecyclerView. Убрал Fragment из RecyclerView т.к. флатер не может корректно надувать фрагмент из recyclerview

--- a/app/src/main/res/drawable-v24/gradient_background.xml
+++ b/app/src/main/res/drawable-v24/gradient_background.xml
@@ -3,9 +3,8 @@
 
     <gradient
         android:angle="90"
-        android:centerColor="#A1A1AA"
-        android:endColor="#bffff2"
-        android:startColor="#555994"
+        android:endColor="#FFFFFF"
+        android:startColor="#ABD0DD"
         android:type="linear" />
 
 </shape>
